--- a/Lab2/dinnerplanner.css
+++ b/Lab2/dinnerplanner.css
@@ -1,11 +1,14 @@
 /*HIDE ALL PAGES DEFAULT*/
-#home,
-#sidebar,
-#selectDish,
-#dishDetails,
-#dinnerOverview/*,
-#instructions */{
+#home, #sidebar, #selectDish, #dishDetails, #dinnerOverview, #instructions {
+	position: relative;
+	top: 71px;
+	left: 0;
 	display: none;
+	height: 100%;
+}
+
+#home {
+	display: block;
 }
 
 html, body {
@@ -23,7 +26,7 @@ hr {
 	border: 1px solid #121212;
 	border-radius: 3px;
 	background-color: #faac58;
-	text-align: center; 
+	text-align: center;
 }
 .dishItem {
 	padding: 0em;
@@ -40,7 +43,6 @@ hr {
 
 
 #container {
-	padding-top: 71px;
 	height: 100vh;
 }
 
@@ -51,18 +53,22 @@ hr {
 	left: 0;
 	background: rgba(255,255,255, 0.8);
 	border-bottom: 2px solid #121212;
+	z-index: 100;
 }
 #header small {
 	font-style: italic;
 }
 
-#home {
+#start {
+	position: absolute;
+	top: 0;
+	left: 0;
 	height: 100vh;
 	background: url('images/bg.jpg');
 	background-size: cover;
 }
 
-#homeDescription {
+#startDescription {
 	margin-left: 1em;
 	padding: 2em;
 	background: rgba(255,255,255, 0.8);
@@ -70,13 +76,26 @@ hr {
 }
 
 #sidebar{
-	height: 100vh;
+/*	height: 100vh; */
+	z-index: 100;
+  	height: 100vh;
 	border-right: 2px solid #121212;
 }
+ @media only screen and (max-width:960px){
+ 	#start {
+	 	height: 100vh;
+		background: url('images/bg.jpg');
+		background-size: cover;
+	}
+	#sidebar {
+		height: auto;
+		margin-top: 5em;
+	}
+}
 #sidebarTableHeader {
-	background: #ccc;	
+	background: #ccc;
 	border: 1px	 solid #121212;
-}	
+}
 .table {
 	display: table;
 	margin: 1em 0;
@@ -101,11 +120,13 @@ hr {
 }
 
 #dishDetails {
+	padding: 1em;
 	height: 100vh;
 }
 
 #ingredients {
-	height: 40vh;
+	height: auto;
+	padding: 2em;
 	background-color: PapayaWhip;
 }
 
